--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ pagination:
   <div class="scrim {% if site.cover %}has-cover{% endif %}">
     <header class="site-header">
       <h1 class="title">Remote Sensing & Hydrology</h1>
-      {% if site.subtitle %}<p class="subtitle">{{ site.subtitle }}</p>{% endif %}
+      {% if site.subtitle %}<h3 class="subtitle">{{ site.subtitle }}</h3>{% endif %}
     </header>
   </div>
 </div>
