change subtitle content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ pagination:
   <div class="scrim {% if site.cover %}has-cover{% endif %}">
     <header class="site-header">
       <h1 class="title">Remote Sensing & Hydrology</h1>
-      {% if site.subtitle %}<h3 class="subtitle">{{ site.subtitle }}</h3>{% endif %}
+      <h3>Integrating Earth Observation with hydrologic-hydrodynamic models </h3>
+      <h3>for water resource monitoring and a better understanding of hydrological cycle</h3>
+<!--       {% if site.subtitle %}<h3 class="subtitle">{{ site.subtitle }}</h3>{% endif %} -->
     </header>
   </div>
 </div>
